# otus_001_cmake

./: .travis.yml  CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app.h  main.cpp  version.h
test/: CMakeLists.txt  test_version.cpp
